@@ -301,6 +301,37 @@ class nggAdminPanel{
 		$this->register_column_headers('nggallery-manage-images', ngg_manage_gallery_columns() );	
 	}
 
+	/**
+	 * Read an array from a remote url
+	 * 
+	 * @param string $url
+	 * @return array of the content
+	 */
+	function get_remote_array($url) {
+		if ( function_exists(wp_remote_request) ) {
+					
+			$options = array();
+			$options['headers'] = array(
+				'User-Agent' => 'NextGEN Gallery Information Reader V' . NGGVERSION . '; (' . get_bloginfo('url') .')'
+			 );
+			 
+			$response = wp_remote_request($url, $options);
+			
+			if ( is_wp_error( $response ) )
+				return false;
+		
+			if ( 200 != $response['response']['code'] )
+				return false;
+		   	
+			$content = unserialize($response['body']);
+	
+			if (is_array($content)) 
+				return $content;
+		}
+		
+		return false;	
+	}
+
 }
 
 function wpmu_site_admin() {
