@@ -7,14 +7,17 @@ V1.1.0
 - NEW : Added pagination for galleries and images in admin section
 - NEW : New action hook after image is added to database, called 'ngg_added_new_image' 
 - NEW : New template for caption below images, called via [nggallery id=x template=caption]
+- Added : SWFUpload V2.2.0 B4
 - Changed : Rework of Manage image tables
 - Changed : Move imagerotator.swf to wp-content/uploads
 - Changed : Added a URL field to setup the path to the Imagerotator
 - Changed : Add additional parameter to gallery object
+- Changed : Load donators list external
 - Bugfix : Style fixes for tables in IE7
 - Bugfix : All albums code couldn't use the slideshow, query is empty for 0
 - Bugfix : Htmlentities() for links in the a href title description
 - Bugfix : Clean up mode for singlepic
+- Bugfix : Typo in widget settings
 
 V1.0.2 - 19.12.2008
 - Added : Option to enable/disable the MediaRSS Feed
